# gpt-book-summarizer

./: main.py  pyproject.toml  worker.py
book_summary/: openai_interaction.py  utils.py
summaries/: be obsessed or be average.txt  the secret Full Summary.txt
temp_files/: .txt  the alchemist.txt
the secret/: 1. The Secret Revealed.txt  2. The Secret Made Simple.txt  3. How to Use The Secret.txt  4. Powerful Processes.txt  5. The Secret to Money.txt
